Update login page

--- a/src/app/pages/dashboard/account-settings/account-settings.component.html
+++ b/src/app/pages/dashboard/account-settings/account-settings.component.html
@@ -5,7 +5,8 @@
   <div class="row">
       <div class="col-md-3 mb-3">
           <div class="list-group box-shadow">
-              <a class="list-group-item list-group-item-action" [routerLink]="['personal-details']" routerLinkActive="active">Personal Details</a>
+              <a class="list-group-item list-group-item-action">Acount Overview</a>
+              <a class="list-group-item list-group-item-action" [routerLink]="['personal-details']" routerLinkActive="active">Edit Personal Details</a>
               <a class="list-group-item list-group-item-action" [routerLink]="['change-password']" routerLinkActive="active">Change Password</a>
             </div>
       </div>
