Add validation to change-password-form

--- a/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
+++ b/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
@@ -3,25 +3,36 @@
     <h4>Change Password</h4>
     <span class="text-muted">Change your password by completing the form below.</span>
   </div>
-  <div class="card-body">
-    <form>
+  <form [formGroup]="form">
+    <div class="card-body">
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Current Password</label>
-        <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <label for="currentPassword" class="form-label">Current Password</label>
+        <input type="password" class="form-control" id="currentPassword" formControlName="currentPassword" aria-describedby="emailHelp" [ngClass]="{ 'is-invalid': submitted && form.controls.currentPassword.errors}">
+        <div class="invalid-feedback">
+          <div *ngIf="form.controls.currentPassword.errors?.required">Required field</div>
+        </div>
       </div>
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">New Password</label>
-        <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <label for="newPassword" class="form-label">New Password</label>
+        <input type="password" class="form-control" id="newPassword" formControlName="newPassword" aria-describedby="emailHelp" [ngClass]="{ 'is-invalid': submitted && form.controls.newPassword.errors}">
+        <div class="invalid-feedback">
+          <div *ngIf="form.controls.newPassword.errors?.required">Required field</div>
+          <div *ngIf="form.controls.newPassword.errors?.minLength">Password must be 8 or more characters</div>
+          <div *ngIf="form.controls.newPassword.errors?.pattern">Password must contain at least 1 uppercase letter, 1 lowercase letter and 1 number</div>
+        </div>
       </div>
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Confirm Password</label>
-        <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <label for="confirmPassword" class="form-label">Confirm Password</label>
+        <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword" aria-describedby="emailHelp" [ngClass]="{ 'is-invalid': submitted && form.controls.confirmPassword.errors}">
+        <div class="invalid-feedback">
+          <div *ngIf="form.controls.confirmPassword.errors?.required">Required field</div>
+        </div>
       </div>
-    </form>
-  </div>
-  <div class="card-footer p-3 bg-light">
-    <div class="d-flex">
-      <button class="btn btn-primary ml-auto">Update Password</button>
     </div>
-  </div>
+    <div class="card-footer p-3 bg-light">
+      <div class="d-flex">
+        <button class="btn btn-primary ml-auto" (click)="submit()">Update Password</button>
+      </div>
+    </div>
+  </form>
 </div>
