Update change-password-form validation and add password service

--- a/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
+++ b/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
@@ -26,6 +26,7 @@
         <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword" aria-describedby="emailHelp" [ngClass]="{ 'is-invalid': submitted && form.controls.confirmPassword.errors}">
         <div class="invalid-feedback">
           <div *ngIf="form.controls.confirmPassword.errors?.required">Required field</div>
+          <div *ngIf="form.controls.confirmPassword.errors?.mustMatch">Password must match</div>
         </div>
       </div>
     </div>
