--- a/src/app/pages/dashboard/users/user-form-dialog/user-form-dialog.component.html
+++ b/src/app/pages/dashboard/users/user-form-dialog/user-form-dialog.component.html
@@ -1,48 +1,58 @@
-<div class="modal fade" id="userFormModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <form class="modal-content" [formGroup]="form">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add New User</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
+<div class="modal-dialog">
+  <form class="modal-content" [formGroup]="form">
+    <div class="modal-header">
+      <h5 class="modal-title" *ngIf="data.id == 0">Add New User</h5>
+      <h5 class="modal-title" *ngIf="data.id > 0">Edit User</h5>
+      <button type="button" class="btn-close" (click)="closeDialog('closed')" style="transform: translateX(-6px);"></button>
+    </div>
+    <div class="modal-body">
 
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="email" class="form-control" id="name" formControlName="name" aria-describedby="emailHelp"
-            [ngClass]="{ 'is-invalid': submitted && form.controls.name.errors}">
-          <div class="invalid-feedback">
-            <div *ngIf="form.controls.name.errors?.required">Required field</div>
-            <div *ngIf="form.controls.name.errors?.maxlength">Exceeded the max length of 500 characters</div>
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label for="surname" class="form-label">Surname</label>
-          <input type="email" class="form-control" id="surname" formControlName="surname" aria-describedby="emailHelp"
-            [ngClass]="{ 'is-invalid': submitted && form.controls.surname.errors}">
-          <div class="invalid-feedback">
-            <div *ngIf="form.controls.surname.errors?.required">Required field</div>
-            <div *ngIf="form.controls.surname.errors?.maxlength">Exceeded the max length of 500 characters</div>
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" formControlName="email" aria-describedby="emailHelp"
-            [ngClass]="{ 'is-invalid': submitted && form.controls.email.errors}">
-          <div class="invalid-feedback">
-            <div *ngIf="form.controls.email.errors?.required">Required field</div>
-            <div *ngIf="form.controls.email.errors?.email">Invalid email</div>
-            <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 500 characters</div>
-          </div>
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" formControlName="name"
+          [ngClass]="{ 'is-invalid': submitted && form.controls.name.errors}">
+        <div class="invalid-feedback">
+          <div *ngIf="form.controls.name.errors?.required">Required field</div>
+          <div *ngIf="form.controls.name.errors?.maxlength">Exceeded the max length of 500 characters</div>
         </div>
       </div>
 
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="submit()">Add User</button>
+      <div class="mb-3">
+        <label for="surname" class="form-label">Surname</label>
+        <input type="text" class="form-control" id="surname" formControlName="surname"
+          [ngClass]="{ 'is-invalid': submitted && form.controls.surname.errors}">
+        <div class="invalid-feedback">
+          <div *ngIf="form.controls.surname.errors?.required">Required field</div>
+          <div *ngIf="form.controls.surname.errors?.maxlength">Exceeded the max length of 500 characters</div>
+        </div>
       </div>
-    </form>
-  </div>
+
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" formControlName="email"
+          [ngClass]="{ 'is-invalid': submitted && form.controls.email.errors}">
+        <div class="invalid-feedback">
+          <div *ngIf="form.controls.email.errors?.required">Required field</div>
+          <div *ngIf="form.controls.email.errors?.email">Invalid email</div>
+          <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 500 characters</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="px-3" *ngIf="data.id == 0">
+      <p>The default password will be set to "initpass".</p>
+
+      <p>Request the user to change their account password when they login in for the first time.</p>
+
+      <p>You can also manually reset the password for the user.</p>
+    </div>
+
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" (click)="closeDialog('closed')">Cancel</button>
+      <button type="button" class="btn btn-primary" (click)="submit()">
+        <span *ngIf="data.id == 0">Add User</span>
+        <span *ngIf="data.id > 0">Update User</span>
+      </button>
+    </div>
+  </form>
 </div>
