--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -7,11 +7,11 @@
 <div *ngIf="!loadingUsers">
   <div class="d-flex align-items-center px-3 pt-3">
     <h3 class="my-0 mr-3">Users</h3>
-    <button class="btn btn-primary ml-auto" data-bs-toggle="modal" data-bs-target="#userFormModal"><i
-        class="fas fa-plus-circle mr-2"></i>Add New User</button>
+    <button class="btn btn-primary ml-auto text-nowrap" (click)="openUserFormDialog(0)"><i
+        class="fas fa-plus-circle mr-2 text-nowrap"></i>Add New User</button>
   </div>
   <div class="container-fluid p-3">
-    <table class="custom-table bg-white border box-shadow">
+    <table class="custom-table bg-white border box-shadow text-nowrap">
       <thead>
         <tr>
           <th scope="col">Account</th>
@@ -31,9 +31,9 @@
               <div class="d-block">
                 {{user.name}} {{user.surname}}
                 <small class="d-flex align-items-center text-muted small" *ngIf="user.isOnline"><i
-                    class="fas fa-circle text-success mr-1"></i>Online since {{user.dateLastLogin | date:'medium'}}</small>
+                    class="fas fa-circle text-success mb-1 mr-1"></i>Online since {{user.dateLastLogin | date:'medium'}}</small>
                 <small class="d-flex align-items-center text-muted small" *ngIf="!user.isOnline"><i
-                    class="fas fa-circle text-warning mr-1"></i>Offline since {{user.dateLastLogoff | date:'medium'}}</small>
+                    class="fas fa-circle text-danger mb-1 mr-1"></i>Offline since {{user.dateLastLogoff | date:'medium'}}</small>
               </div>
             </div>
           </td>
@@ -54,13 +54,14 @@
                 aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-ellipsis-v"></i>
               </button>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+              <div class="dropdown-menu dropdown-menu-right">
                 <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
-                <button class="dropdown-item" type="button" data-bs-toggle="modal" data-bs-target="#userFormModal"><i class="fas fa-edit"></i>Edit Details</button>
+                <button class="dropdown-item" type="button" (click)="openUserFormDialog(user.id)"><i class="fas fa-edit"></i>Edit Details</button>
+                <button class="dropdown-item" type="button"><i class="fas fa-key"></i>Change Password</button>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <button class="dropdown-item text-danger" type="button"><i
+                <button class="dropdown-item text-danger" type="button" (click)="openDeactivateUserDialog()"><i
                     class="fas fa-user-times"></i>Deactivate</button>
                 <button class="dropdown-item text-danger" type="button"><i class="fas fa-trash"></i>Delete</button>
               </div>
@@ -71,5 +72,3 @@
     </table>
   </div>
 </div>
-
-<app-user-form-dialog></app-user-form-dialog>
