--- a/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
+++ b/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header bg-white p-3">
     <h4>Change Password</h4>
-    <span class="text-muted">Change your password by completing the form below.</span>
+    <span>Change your password by completing the form below.</span>
   </div>
   <form [formGroup]="form">
     <div class="card-body">
