--- a/src/app/pages/dashboard/account-settings/personal-details-form/personal-details-form.component.html
+++ b/src/app/pages/dashboard/account-settings/personal-details-form/personal-details-form.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header bg-white p-3">
         <h4>Personal Details</h4>
-        <span class="text-muted">Update your personal details by completing the form below.</span>
+        <span>Update your personal details by completing the form below.</span>
     </div>
     <form [formGroup]="form">
         <div class="card-body">
