--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -17,3 +17,7 @@
   background-image: url('../../../assets/images/LoginBackground.png');
   background-size: cover;
 }
+
+.danger-snackbar{
+  background-color: red !important;
+}
