--- a/src/app/pages/dashboard/account-settings/account-settings.component.html
+++ b/src/app/pages/dashboard/account-settings/account-settings.component.html
@@ -1,19 +1,31 @@
-<div class="d-flex align-items-center pt-3 px-3">
-  <h3 class="my-0 mr-3">Account Settings</h3>
+<div class="py-5 d-flex align-items-center justify-content-center" *ngIf="loading" style="height: 100vh;">
+  <div class="spinner-border spinner-border-sm" role="status"></div>
+  <span class="ml-2 text-nowrap">Loading Account Settings...</span>
 </div>
-<div class="container-fluid p-3">
-  <div class="row">
-      <div class="col-md-3 mb-3">
-          <div class="list-group box-shadow">
-              <a class="list-group-item list-group-item-action">Acount Overview</a>
-              <a class="list-group-item list-group-item-action" [routerLink]="['personal-details']" routerLinkActive="active">Edit Personal Details</a>
-              <a class="list-group-item list-group-item-action" [routerLink]="['change-password']" routerLinkActive="active">Change Password</a>
-            </div>
-      </div>
-      <div class="col-md-8">
-        <div style="max-width: 600px;">
-          <router-outlet></router-outlet>
+
+<div class="py-5 d-flex align-items-center justify-content-center" *ngIf="showError" style="height: 100vh;">
+  <app-reload-page-warning></app-reload-page-warning>
+</div>
+
+<div *ngIf="!loading && !showError">
+  <div class="d-flex align-items-center pt-3 px-3">
+    <h3 class="my-0 mr-3">Account Settings</h3>
+  </div>
+  <div class="container-fluid p-3">
+    <div class="row">
+        <div class="col-md-3 mb-3">
+            <div class="list-group box-shadow">
+                <a class="list-group-item list-group-item-action">Acount Overview</a>
+                <a class="list-group-item list-group-item-action" [routerLink]="['personal-details']" routerLinkActive="active">Edit Personal Details</a>
+                <a class="list-group-item list-group-item-action" [routerLink]="['change-password']" routerLinkActive="active">Change Password</a>
+              </div>
         </div>
-      </div>
+        <div class="col-md-8">
+          <div style="max-width: 600px;">
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+    </div>
   </div>
 </div>
+
