--- a/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
+++ b/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
@@ -6,13 +6,6 @@
   <form [formGroup]="form">
     <div class="card-body">
       <div class="mb-3">
-        <label for="currentPassword" class="form-label">Current Password</label>
-        <input type="password" class="form-control" id="currentPassword" formControlName="currentPassword" aria-describedby="emailHelp" [ngClass]="{ 'is-invalid': submitted && form.controls.currentPassword.errors}">
-        <div class="invalid-feedback">
-          <div *ngIf="form.controls.currentPassword.errors?.required">Required field</div>
-        </div>
-      </div>
-      <div class="mb-3">
         <label for="newPassword" class="form-label">New Password</label>
         <input type="password" class="form-control" id="newPassword" formControlName="newPassword" aria-describedby="emailHelp" [ngClass]="{ 'is-invalid': submitted && form.controls.newPassword.errors}">
         <div class="invalid-feedback">
@@ -32,7 +25,13 @@
     </div>
     <div class="card-footer p-3 bg-light">
       <div class="d-flex">
-        <button class="btn btn-primary ml-auto" (click)="submit()">Update Password</button>
+        <button type="button" class="btn btn-primary ml-auto" (click)="submit()" [disabled]="changingUserPassword">
+          <span *ngIf="!changingUserPassword">Change Password</span>
+          <span *ngIf="changingUserPassword">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            <span class="ml-2">Changing Password</span>
+          </span>
+        </button>
       </div>
     </div>
   </form>
