--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -10,13 +10,11 @@
 <div class="container-fluid p-3" *ngIf="!gettingUsers && !gettingUsersError">
   <div class="row">
     <div class="col-12">
-
       <div class="d-flex align-items-center mb-3">
         <h3 class="my-0 mr-3">Users</h3>
         <button class="btn btn-primary ml-auto text-nowrap" (click)="openUserFormDialog(0)"><i
             class="fas fa-plus-circle mr-2 text-nowrap"></i>Add New User</button>
       </div>
-
       <table class="custom-table bg-white border box-shadow text-nowrap">
         <thead>
           <tr>
@@ -36,12 +34,12 @@
                 <i class="fas fa-user-circle mr-2"></i>
                 <div class="d-block">
                   {{user.name}} {{user.surname}}
-                  <small class="d-flex align-items-center text-muted small" *ngIf="user.isOnline"><i
-                      class="fas fa-circle text-success mb-1 mr-1"></i>Online since {{user.dateLastLogin |
+                  <!-- <small class="d-flex align-items-center text-muted small" *ngIf="user.isOnline"><i
+                      class="fas fa-circle text-success mr-1"></i>Online since {{user.dateLastLogin |
                     date:'longDate'}}</small>
                   <small class="d-flex align-items-center text-muted small" *ngIf="!user.isOnline"><i
-                      class="fas fa-circle text-danger mb-1 mr-1"></i>Offline since {{user.dateLastLogoff |
-                    date:'longDate'}}</small>
+                      class="fas fa-circle text-danger mr-1"></i>Offline since {{user.dateLastLogoff |
+                    date:'longDate'}}</small> -->
                 </div>
               </div>
             </td>
@@ -66,7 +64,6 @@
                   <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
                   <button class="dropdown-item" type="button" (click)="openUserFormDialog(user.id)"><i
                       class="fas fa-edit"></i>Edit Details</button>
-                  <button class="dropdown-item" type="button"><i class="fas fa-key"></i>Change Password</button>
                   <button class="dropdown-item" type="button" (click)="openActivateUserDialog(user.id)"
                     *ngIf="!user.isActivated"><i class="fas fa-user-check"></i>Activate</button>
                   <li>
@@ -82,7 +79,6 @@
           </tr>
         </tbody>
       </table>
-
     </div>
   </div>
 </div>
