Remove text-muted in account-overview

--- a/src/app/pages/dashboard/account-settings/account-overview/account-overview.component.html
+++ b/src/app/pages/dashboard/account-settings/account-overview/account-overview.component.html
@@ -2,7 +2,7 @@
 
   <div class="card-header bg-white p-3">
     <h4>Account Overview</h4>
-    <span class="text-muted">Here is an overview of your account information.</span>
+    <span>Here is an overview of your account information.</span>
   </div>
 
   <div class="card-body px-0">
