--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-background bg-light">
+<div class="login-background bg-light border-top">
   <form class="card p-3" [formGroup]="form">
     <div class="card-body">
 
