--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -7,7 +7,81 @@
   <app-reload-page-warning></app-reload-page-warning>
 </div>
 
-<div class="container-fluid p-3" *ngIf="!gettingUsers && !gettingUsersError">
+<div class="card m-3" *ngIf="!gettingUsers && !gettingUsersError">
+  <div class="d-flex p-3 align-items-center">
+    <h4 class="mb-0 mr-3">Users</h4>
+    <button class="btn btn-primary ml-auto text-nowrap" (click)="openUserFormDialog(0)"><i
+      class="fas fa-plus-circle mr-2 text-nowrap"></i>Add New User</button>
+  </div>
+  <div class="table-wrapper">
+    <table class="custom-table border-top border-bottom text-nowrap">
+      <thead class="bg-light">
+        <tr>
+          <th scope="col">Account</th>
+          <th scope="col">Email</th>
+          <th scope="col">Date Added</th>
+          <th scope="col">Date Last Modified</th>
+          <th scope="col">Role</th>
+          <th scope="col">Account Status</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of users">
+          <td>
+            <div class="d-flex align-items-center">
+              <i class="fas fa-user-circle mr-2"></i>
+              <div class="d-block">
+                {{user.name}} {{user.surname}}
+                <!-- <small class="d-flex align-items-center text-muted small" *ngIf="user.isOnline"><i
+                    class="fas fa-circle text-success mr-1"></i>Online since {{user.dateLastLogin |
+                  date:'longDate'}}</small>
+                <small class="d-flex align-items-center text-muted small" *ngIf="!user.isOnline"><i
+                    class="fas fa-circle text-danger mr-1"></i>Offline since {{user.dateLastLogoff |
+                  date:'longDate'}}</small> -->
+              </div>
+            </div>
+          </td>
+          <td>{{user.email}}</td>
+          <td>{{user.dateAdded | date:'longDate'}}</td>
+          <td>{{user.dateLastUpdated | date:'longDate'}}</td>
+          <td>
+            <span *ngIf="user.isAdmin">Admin</span>
+            <span *ngIf="!user.isAdmin">User</span>
+          </td>
+          <td>
+            <span *ngIf="user.isActivated" class="badge rounded-pill bg-success mr-1">Activated</span>
+            <span *ngIf="!user.isActivated" class="badge rounded-pill bg-danger mr-1">Deactivated</span>
+          </td>
+          <td>
+            <div class="dropdown">
+              <button class="btn btn-secondary btn-circle" type="button" id="userMenu" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-ellipsis-v"></i>
+              </button>
+              <div class="dropdown-menu dropdown-menu-right">
+                <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
+                <button class="dropdown-item" type="button" (click)="openUserFormDialog(user.id)"><i
+                    class="fas fa-edit"></i>Edit Details</button>
+                <button class="dropdown-item" type="button" (click)="openActivateUserDialog(user.id)"
+                  *ngIf="!user.isActivated"><i class="fas fa-user-check"></i>Activate</button>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <button class="dropdown-item text-danger" type="button" (click)="openDeactivateUserDialog(user.id)"
+                  *ngIf="user.isActivated"><i class="fas fa-user-times"></i>Deactivate</button>
+                <button class="dropdown-item text-danger" type="button" (click)="openDeleteUserDialog(user.id)"><i
+                    class="fas fa-trash"></i>Delete</button>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="container-fluid p-3 d-none" *ngIf="!gettingUsers && !gettingUsersError">
   <div class="row">
     <div class="col-12">
       <div class="d-flex align-items-center mb-3">
@@ -15,7 +89,7 @@
         <button class="btn btn-primary ml-auto text-nowrap" (click)="openUserFormDialog(0)"><i
             class="fas fa-plus-circle mr-2 text-nowrap"></i>Add New User</button>
       </div>
-      <table class="custom-table bg-white border box-shadow text-nowrap">
+      <table class="custom-table border text-nowrap">
         <thead>
           <tr>
             <th scope="col">Account</th>
