--- a/src/app/pages/dashboard/users/delete-user-dialog/delete-user-dialog.component.html
+++ b/src/app/pages/dashboard/users/delete-user-dialog/delete-user-dialog.component.html
@@ -1,11 +1,11 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h5 class="modal-title">Deactivate User</h5>
+      <h4 class="modal-title">Deactivate User</h4>
       <button type="button" class="btn-close" (click)="closeDialog('closed')"></button>
     </div>
     <div class="modal-body">
-      <p class="mb-0">Are you sure you want to delete this user? This user data will be permanently lost, and the action cannot be undone.</p>
+      <p class="mb-0">Are you sure you want to delete this user? This user's data will be permanently lost, and the action cannot be undone.</p>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" (click)="closeDialog('Closed')">Cancel</button>
