--- a/src/styles.scss
+++ b/src/styles.scss
@@ -160,13 +160,17 @@ $dropdown-border-color: $gray-300;
   height: 1px !important;
 }
 
-.dropdown-menu{
+.custom-dropdown{
   box-shadow: $box-shadow !important;
+  border: 1px solid $gray-300;
+  border-radius: .25rem;
+  background-color: white !important;
 }
 
 //Card styles
 .card{
   box-shadow: $box-shadow !important;
+  border-color: $gray-300 !important;
 }
 
 .card-header{
