--- a/src/app/pages/dashboard/clients/clients.component.html
+++ b/src/app/pages/dashboard/clients/clients.component.html
@@ -1,1 +1,86 @@
+<div class="card overflow-hidden">
+  <div class="d-flex border-bottom p-3 align-items-center">
+    <h4 class="mb-0 mr-3">Clients</h4>
+    <button class="btn btn-secondary ml-auto"><i class="fas fa-download mr-2"></i>Export List</button>
+    <button class="btn btn-primary ml-2"><i class="fas fa-plus-circle mr-2"></i>Add New Client</button>
+  </div>
+  <div class="d-flex overflow-hidden">
+    <div class="d-flex flex-column border-right bg-light p-3" style="width: 260px; height: calc(100vh - 100px)">
 
+        <label>Search</label>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control">
+          <button class="btn btn-secondary border"><i class="fas fa-search"></i></button>
+        </div>
+
+        <label>Display</label>
+        <select class="form-select mb-3">
+          <option selected></option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+
+        <label>Last Edited By</label>
+        <select class="form-select mb-3">
+          <option selected></option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
+
+        <b>100 Results Found</b>
+
+      </div>
+    <div class="d-flex flex-column w-100 overflow-auto">
+      <table class="custom-table text-nowrap">
+        <thead class="bg-light border-bottom">
+          <th scope="col">Id</th>
+          <th scope="col">Full Name</th>
+          <th scope="col">Company</th>
+          <th scope="col">Email</th>
+          <th scope="col">Cell Number</th>
+          <th scope="col">Tel Number</th>
+          <th scope="col">Tags</th>
+          <th scope="col">Property Interests</th>
+          <th scope="col">Last Contacted</th>
+          <th scope="col">Follow Up</th>
+          <th scope="col">Added</th>
+          <th scope="col">Last Updated</th>
+          <th scope="col">Lasted Edited</th>
+          <th scope="col"></th>
+        </thead>
+        <tbody>
+          <tr class="border-top border-bottom">
+            <td>1</td>
+            <td>John Doe</td>
+            <td>Acenture</td>
+            <td>john@gmail.com</td>
+            <td>+27 (0) 79 306 1179</td>
+            <td>+27 (0) 11 306 1179</td>
+            <td>
+              <span class="badge rounded-pill bg-primary mr-1">Investor</span><span class="badge rounded-pill bg-primary">Developer</span>
+            </td>
+            <td>
+              <span class="badge rounded-pill bg-primary mr-1">Shopping Mall</span><span class="badge rounded-pill bg-primary">Land</span>
+            </td>
+            <td>January 25, 2022</td>
+            <td>January 28, 2022</td>
+            <td>January 14, 2022</td>
+            <td>January 25, 2022</td>
+            <td>Rene Styber</td>
+            <td>
+              <button  class="btn btn-secondary btn-circle" [matMenuTriggerFor]="menu"><i class="fas fa-ellipsis-v"></i></button>
+              <mat-menu #menu="matMenu" class="custom-dropdown">
+                <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
+                <button class="dropdown-item" type="button"><i class="fas fa-edit"></i>Edit Details</button>
+                <hr class="dropdown-divider">
+                <button class="dropdown-item text-danger" type="button"><i class="fas fa-trash"></i>Delete</button>
+              </mat-menu>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
