--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <app-top-bar></app-top-bar>
 <div class="side-nav d-flex flex-column">
     <p class="small text-gray-500 pl-3 mb-1 mt-3">Menu</p>
-    <button disabled class="side-nav-button px-3 py-2 disabled" [routerLink]="['companies']" routerLinkActive="router-link-active"><i class="fas fa-lock mr-2"></i>Companies </button>
-    <button disabled class="side-nav-button px-3 py-2 disabled" [routerLink]="['clients']" routerLinkActive="router-link-active"><i class="fas fa-lock mr-2"></i>Clients</button>
+    <button class="side-nav-button px-3 py-2" [routerLink]="['companies']" routerLinkActive="router-link-active"><i class="fas fa-briefcase mr-2"></i>Companies </button>
+    <button class="side-nav-button px-3 py-2" [routerLink]="['clients']" routerLinkActive="router-link-active"><i class="fas fa-lock mr-2"></i>Clients</button>
     <button disabled class="side-nav-button px-3 py-2 disabled" [routerLink]="['properties']" routerLinkActive="router-link-active"><i class="fas fa-lock mr-2"></i>Properties</button>
     <p class="small text-gray-500 pl-3 mb-1 mt-3">Admin</p>
     <button disabled class="side-nav-button px-3 py-2 disabled" [routerLink]="['audit-log']" routerLinkActive="router-link-active"><i class="fas fa-lock mr-2"></i>Audit Log</button>
