--- a/src/app/pages/dashboard/clients/clients.component.scss
+++ b/src/app/pages/dashboard/clients/clients.component.scss
@@ -1,12 +1,16 @@
 tr th:last-of-type{
-    text-align: end;
+  text-align: end;
 }
 
 tr td:last-of-type{
-    text-align: end;
+  text-align: end;
 }
 
-.nav-link .active{
-    background-color: transparent !important;
+.card{
+  position: absolute;
+  top: 16px;
+  bottom: 16px;
+  left: 236px;
+  right: 16px;
 }
 
