Add ui changes and search filtering for companies

--- a/src/app/pages/dashboard/account-settings/account-overview/account-overview.component.html
+++ b/src/app/pages/dashboard/account-settings/account-overview/account-overview.component.html
@@ -5,7 +5,7 @@
     <span>Here is an overview of your account information.</span>
   </div>
 
-  <div class="card-body px-0">
+  <div class="card-body">
 
     <div class="d-flex pb-2">
       <div class="col-4"><b>Full Name</b></div>
