--- a/src/app/pages/dashboard/users/view-user-details-dialog/view-user-details-dialog.component.html
+++ b/src/app/pages/dashboard/users/view-user-details-dialog/view-user-details-dialog.component.html
@@ -4,7 +4,7 @@
             <h4 class="modal-title">User Details</h4>
             <button type="button" class="btn-close" (click)="closeDialog('closed')"></button>
         </div>
-        <div class="modal-body px-0">
+        <div class="modal-body">
             <div class="d-flex pb-2">
                 <div class="col-4"><b>Full Name</b></div>
                 <div class="col-8"><span>{{user.name}} {{user.surname}}</span></div>
