--- a/src/app/pages/dashboard/account-settings/account-settings.component.html
+++ b/src/app/pages/dashboard/account-settings/account-settings.component.html
@@ -1,6 +1,6 @@
 <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="loading" style="height: 100vh;">
   <div class="spinner-border spinner-border-sm" role="status"></div>
-  <span class="ml-2 text-nowrap">Loading Account Settings...</span>
+  <span class="ms-2 text-nowrap">Loading Account Settings...</span>
 </div>
 
 <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="showError" style="height: 100vh;">
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-3 mb-3">
             <div class="list-group box-shadow">
-                <a class="list-group-item list-group-item-action" [routerLink]="['account-overview']"  routerLinkActive="active">Acount Overview</a>
+                <a class="list-group-item list-group-item-action" [routerLink]="['account-overview']"  routerLinkActive="active">Account Overview</a>
                 <a class="list-group-item list-group-item-action" [routerLink]="['personal-details']" routerLinkActive="active">Edit Personal Details</a>
                 <a class="list-group-item list-group-item-action" [routerLink]="['change-password']" routerLinkActive="active">Change Password</a>
             </div>
