--- a/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
+++ b/src/app/pages/dashboard/account-settings/change-password-form/change-password-form.component.html
@@ -25,11 +25,11 @@
     </div>
     <div class="card-footer p-3 bg-light">
       <div class="d-flex">
-        <button type="button" class="btn btn-primary ml-auto" (click)="submit()" [disabled]="changingUserPassword">
+        <button type="button" class="btn btn-primary ms-auto" (click)="submit()" [disabled]="changingUserPassword">
           <span *ngIf="!changingUserPassword">Change Password</span>
           <span *ngIf="changingUserPassword">
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-            <span class="ml-2">Changing Password</span>
+            <span class="ms-2">Changing Password</span>
           </span>
         </button>
       </div>
