--- a/src/app/pages/dashboard/clients/clients.component.html
+++ b/src/app/pages/dashboard/clients/clients.component.html
@@ -1,19 +1,19 @@
 <div class="card overflow-hidden">
   <div class="d-flex border-bottom p-3 align-items-center">
-    <h4 class="mb-0 mr-3">Clients</h4>
-    <button class="btn btn-secondary ml-auto"><i class="fas fa-download mr-2"></i>Export List</button>
-    <button class="btn btn-primary ml-2"><i class="fas fa-plus-circle mr-2"></i>Add New Client</button>
+    <h4 class="mb-0 me-3">Clients</h4>
+    <button class="btn btn-secondary ms-auto"><i class="fas fa-download me-2"></i>Export List</button>
+    <button class="btn btn-primary ms-2"><i class="fas fa-plus-circle me-2"></i>Add New Client</button>
   </div>
   <div class="d-flex overflow-hidden">
-    <div class="d-flex flex-column border-right bg-light p-3" style="width: 260px; height: calc(100vh - 100px)">
+    <div class="d-flex flex-column border-end bg-light p-3" style="width: 260px; height: calc(100vh - 100px)">
 
-        <label>Search</label>
+        <label class="form-label">Search</label>
         <div class="input-group mb-3">
           <input type="text" class="form-control">
           <button class="btn btn-secondary border"><i class="fas fa-search"></i></button>
         </div>
 
-        <label>Display</label>
+        <label class="form-label">Display</label>
         <select class="form-select mb-3">
           <option selected></option>
           <option value="1">One</option>
@@ -21,7 +21,7 @@
           <option value="3">Three</option>
         </select>
 
-        <label>Last Edited By</label>
+        <label class="form-label">Last Edited By</label>
         <select class="form-select mb-3">
           <option selected></option>
           <option value="1">One</option>
@@ -59,10 +59,10 @@
             <td>+27 (0) 79 306 1179</td>
             <td>+27 (0) 11 306 1179</td>
             <td>
-              <span class="badge rounded-pill bg-primary mr-1">Investor</span><span class="badge rounded-pill bg-primary">Developer</span>
+              <span class="badge rounded-pill bg-primary me-1">Investor</span><span class="badge rounded-pill bg-primary">Developer</span>
             </td>
             <td>
-              <span class="badge rounded-pill bg-primary mr-1">Shopping Mall</span><span class="badge rounded-pill bg-primary">Land</span>
+              <span class="badge rounded-pill bg-primary me-1">Shopping Mall</span><span class="badge rounded-pill bg-primary">Land</span>
             </td>
             <td>January 25, 2022</td>
             <td>January 28, 2022</td>
