--- a/src/app/pages/dashboard/companies/companies.component.html
+++ b/src/app/pages/dashboard/companies/companies.component.html
@@ -1,78 +1,52 @@
-<div class="card overflow-hidden">
-  <div class="d-flex border-bottom p-3 align-items-center">
-    <h4 class="mb-0 mr-3">Companies</h4>
-    <button class="btn btn-primary ml-auto"><i class="fas fa-plus-circle mr-2"></i>Add New Company</button>
+<div class="py-5 d-flex align-items-center justify-content-center" *ngIf="gettingCompanies" style="height: 100vh;">
+  <div class="spinner-border spinner-border-sm" role="status"></div>
+  <span class="ms-2 text-nowrap">Loading Companies...</span>
+</div>
+
+<div class="py-5 d-flex align-items-center justify-content-center" *ngIf="gettingCompaniesError" style="height: 100vh;">
+  <app-reload-page-warning></app-reload-page-warning>
+</div>
+
+<div class="card overflow-hidden" *ngIf="!gettingCompanies && !gettingCompaniesError">
+  <div class="d-flex border-bottom p-3 align-items-center text-nowrap">
+    <h4 class="mb-0 me-3">Companies</h4>
+    <button class="btn btn-secondary ms-auto me-2" (click)="displayFilters()">
+      <i class="fas fa-filter me-2"></i>
+      <span *ngIf="showFilters">Hide Filters</span>
+      <span *ngIf="!showFilters">Show Filters</span>
+    </button>
+    <button class="btn btn-primary" (click)="openCompanyFormDialog(0)"><i class="fas fa-plus-circle me-2"></i>Add New Company</button>
   </div>
   <div class="d-flex overflow-hidden">
-    <div class="d-flex flex-column border-right bg-light p-3" style="width: 260px; height: calc(100vh - 100px)">
 
-        <label>Search</label>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control">
-          <button class="btn btn-secondary border"><i class="fas fa-search"></i></button>
-        </div>
+    <app-filter-companies-form [showFilters]="showFilters"></app-filter-companies-form>
 
-        <label>Display</label>
-        <select class="form-select mb-3">
-          <option selected></option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-
-        <label>Last Edited By</label>
-        <select class="form-select mb-3">
-          <option selected></option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-
-        <b>100 Results Found</b>
-
-      </div>
     <div class="d-flex flex-column w-100 overflow-auto">
-      <table class="custom-table">
+      <table class="custom-table text-nowrap">
         <thead class="bg-light border-bottom">
           <tr>
             <th scope="col">Id</th>
             <th scope="col">Name</th>
             <th scope="col">Added</th>
             <th scope="col">Updated</th>
-            <th scope="col">Last Updated By</th>
+            <th scope="col">Last Editor</th>
             <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
-          <tr class="border-top border-bottom">
-            <td>1</td>
-            <td>Acenture</td>
-            <td>January 25, 2022</td>
-            <td>January 25, 2022</td>
-            <td>Rene Styber</td>
+          <tr class="border-top border-bottom" *ngFor="let company of companies">
+            <td>{{company.id}}</td>
+            <td>{{company.name}}</td>
+            <td>{{company.dateAdded | date:'longDate'}}</td>
+            <td>{{company.dateLastUpdated | date:'longDate'}}</td>
+            <td>{{company.lastEditor}}</td>
             <td>
               <button  class="btn btn-secondary btn-circle" [matMenuTriggerFor]="menu"><i class="fas fa-ellipsis-v"></i></button>
               <mat-menu #menu="matMenu" class="custom-dropdown">
-                <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
-                <button class="dropdown-item" type="button"><i class="fas fa-edit"></i>Edit Details</button>
-                <hr class="dropdown-divider">
-                <button class="dropdown-item text-danger" type="button"><i class="fas fa-trash"></i>Delete</button>
-              </mat-menu>
-            </td>
-          </tr>
-          <tr class="border-top border-bottom">
-            <td>1</td>
-            <td>Acenture</td>
-            <td>January 25, 2022</td>
-            <td>January 25, 2022</td>
-            <td>Rene Styber</td>
-            <td>
-              <button  class="btn btn-secondary btn-circle" [matMenuTriggerFor]="menu"><i class="fas fa-ellipsis-v"></i></button>
-              <mat-menu #menu="matMenu" class="custom-dropdown">
-                <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
-                <button class="dropdown-item" type="button"><i class="fas fa-edit"></i>Edit Details</button>
-                <hr class="dropdown-divider">
-                <button class="dropdown-item text-danger" type="button"><i class="fas fa-trash"></i>Delete</button>
+                <button class="dropdown-item"><i class="fas fa-folder-open"></i>Details</button>
+                <button class="dropdown-item" (click)="openCompanyFormDialog(company.id)"><i class="fas fa-edit"></i>Edit</button>
+                <hr class="my-2">
+                <button class="dropdown-item text-danger" (click)="openDeleteCompanyDialog(company.id)"><i class="fas fa-trash"></i>Delete</button>
               </mat-menu>
             </td>
           </tr>
@@ -80,4 +54,4 @@
       </table>
     </div>
   </div>
-</div>
+
