--- a/src/app/pages/dashboard/users/delete-user-dialog/delete-user-dialog.component.html
+++ b/src/app/pages/dashboard/users/delete-user-dialog/delete-user-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h4 class="modal-title">Deactivate User</h4>
+      <h4 class="modal-title">Delete User</h4>
       <button type="button" class="btn-close" (click)="closeDialog('closed')"></button>
     </div>
     <div class="modal-body">
