--- a/src/app/pages/dashboard/users/users.component.html
+++ b/src/app/pages/dashboard/users/users.component.html
@@ -1,6 +1,6 @@
 <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="gettingUsers" style="height: 100vh;">
   <div class="spinner-border spinner-border-sm" role="status"></div>
-  <span class="ml-2 text-nowrap">Loading Users...</span>
+  <span class="ms-2 text-nowrap">Loading Users...</span>
 </div>
 
 <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="gettingUsersError" style="height: 100vh;">
@@ -9,9 +9,9 @@
 
 <div class="card m-3 overflow-hidden" *ngIf="!gettingUsers && !gettingUsersError">
   <div class="d-flex p-3 align-items-center">
-    <h4 class="mb-0 mr-3">Users</h4>
-    <button class="btn btn-primary ml-auto text-nowrap" (click)="openUserFormDialog(0)"><i
-      class="fas fa-plus-circle mr-2 text-nowrap"></i>Add New User</button>
+    <h4 class="mb-0 me-3">Users</h4>
+    <button class="btn btn-primary ms-auto text-nowrap" (click)="openUserFormDialog(0)"><i
+      class="fas fa-plus-circle me-2 text-nowrap"></i>Add New User</button>
   </div>
   <div class="overflow-auto">
     <table class="custom-table border-top text-nowrap">
@@ -19,10 +19,10 @@
         <tr>
           <th scope="col">Account</th>
           <th scope="col">Email</th>
-          <th scope="col">Date Added</th>
-          <th scope="col">Date Last Modified</th>
+          <th scope="col">Added</th>
+          <th scope="col">Updated</th>
           <th scope="col">Role</th>
-          <th scope="col">Account Status</th>
+          <th scope="col">Status</th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -30,7 +30,7 @@
         <tr *ngFor="let user of users">
           <td>
             <div class="d-flex align-items-center">
-              <i class="fas fa-user-circle mr-2"></i>
+              <i class="fas fa-user-circle me-2"></i>
               <div class="d-block">
                 {{user.name}} {{user.surname}}
                 <!-- <small class="d-flex align-items-center text-muted small" *ngIf="user.isOnline"><i
@@ -56,10 +56,10 @@
           <td>
             <button  class="btn btn-secondary btn-circle" [matMenuTriggerFor]="menu"><i class="fas fa-ellipsis-v"></i></button>
             <mat-menu #menu="matMenu" class="custom-dropdown">
-              <button class="dropdown-item" type="button" (click)="openViewUserDetailsDialog(user.id)"><i class="fas fa-folder-open"></i>View All Details</button>
-              <button class="dropdown-item" type="button" (click)="openUserFormDialog(user.id)"><i class="fas fa-edit"></i>Edit Details</button>
+              <button class="dropdown-item" type="button" (click)="openViewUserDetailsDialog(user.id)"><i class="fas fa-folder-open"></i>Details</button>
+              <button class="dropdown-item" type="button" (click)="openUserFormDialog(user.id)"><i class="fas fa-edit"></i>Edit</button>
               <button class="dropdown-item" type="button" (click)="openActivateUserDialog(user.id)" *ngIf="!user.isActivated"><i class="fas fa-user-check"></i>Activate</button>
-              <hr class="dropdown-divider">
+              <hr class="my-2">
               <button class="dropdown-item text-danger" type="button" (click)="openDeactivateUserDialog(user.id)" *ngIf="user.isActivated"><i class="fas fa-user-times"></i>Deactivate</button>
               <button class="dropdown-item text-danger" type="button" (click)="openDeleteUserDialog(user.id)"><i class="fas fa-trash"></i>Delete</button>
             </mat-menu>
